Updates NASA HEAT description

--- a/app/src/main/res/values-es/strings.xml
+++ b/app/src/main/res/values-es/strings.xml
@@ -443,8 +443,7 @@
 
     <array name="current_partners_desc">
         <item name="nasa_description">El NASA Heliophysics Education Activation Team (NASA HEAT) capitaliza la amplia trayectoria de la NASA de compartir investigación y tecnología mediante proyectos educativos atractivos e innovadores.
-            El NASA HEAT (anteriormente denominado NASA Space Science Education Consortium (NSSEC)) continúa el trabajo de la organización Science Mission Directorate (SMD) al frente de las iniciativas educativas de la NASA al vincular ciencia y misiones
-            emocionantes directamente con el público estadounidense.
+            El NASA HEAT (anteriormente denominado NASA Space Science Education Consortium (NSSEC)) continúa el trabajo de la organización Science Mission Directorate (SMD) al frente de las iniciativas educativas de la NASA al vincular ciencia y misiones emocionantes directamente con el público estadounidense.
             El NASA HEAT colabora con ARISA Lab para su proyecto Eclipse Soundscapes aplicación mobil a fin de ofrecer el guion calculando el momento del eclipse, expertas en la materia, y los fondos que posibilitan el proyecto Eclipse Soundscapes.</item>
 
         <item name="wgbh_description">El National Center for Accessible Media (NCAM) de la fundación Carl and Ruth Shapiro Family es una rama sin fines de lucro de GBH en Boston que se dedica a lograr igualdad en el acceso a los medios para personas con discapacidades.
