--- a/app/src/main/res/values-es/strings.xml
+++ b/app/src/main/res/values-es/strings.xml
@@ -25,7 +25,7 @@
     <string name="sec_abbr">s</string>
     <string name="local_time">Hora Local</string>
     <string name="universal_time">Hora Universal</string>
-    <string name="time_ut">Hora (UT)</string>
+    <string name="time_ut">UT</string>
 
     <string name="settings">Configuraciones</string>
     <string name="open_settings">Abre las configuraciónes</string>
@@ -86,7 +86,7 @@
     <string name="menu">Menú</string>
     <string name="about_us_details">La aplicación móvil Eclipse Soundscapes es un producto del Eclipse Soundscapes Project, que es una empresa de ARISA Lab, LLC.
         Eclipse Soundscapes Project tiene como objetivo involucrar a TODOS las personas con la astrofísica, con un enfoque intencional en la inclusión y la accesibilidad.
-        Para obtener más información, visite EclipseSoundscapes.org. El desarrollo de la aplicación móvil Eclipse Soundscapes está financiado por NASA Space Science Education Consortium.</string>
+        Para obtener más información, visite EclipseSoundscapes.org. El desarrollo de la aplicación móvil Eclipse Soundscapes está financiado por NASA Heliophysics Education Activation Team (NASA HEAT).</string>
 
     <string name="our_partners">Nuestros colaboradores</string>
     <string name="current_partners">Colaboradores actuales</string>
@@ -100,7 +100,10 @@
         Agradecemos a la comunidad de código abierto por todas sus contribuciones.</string>
 
     <!-- Eclipse Center -->
-    <string name="eclipse_center_lockout_details">Próximamente se actualizarán los datos del Eclipse.</string>
+    <string name="next_eclipse_info">La información del próximo eclipse</string>
+    <string name="next_eclipse_user_location">Próximo eclipse en su ubicación</string>
+    <string name="next_eclipse_simulated_location">Próximo eclipse en la ubicación más cercana</string>
+    <string name="eclipse_center_lockout_details">Próximamente se actualizarán los datos del eclipse.</string>
     <string name="eclipse_countdown_title">Cuenta regresiva hasta el eclipse</string>
     <string name="event_section_desc">A continuación se indican los eventos en la ubicación más cercana. Los eventos incluyen la hora local y universal.</string>
     <string name="event_desc_format">Evento desde la ubicación más cercana: %1$s, hora local, %2$s, hora universal, %3$s</string>
@@ -118,6 +121,8 @@
     <string name="lat_lng_format">%1$.3f&#xb0; %2$s</string>
     <string name="percent_eclipse">% del eclipse</string>
     <string name="totality_duration">Duración del eclipse total</string>
+    <string name="annular_duration">Duración del Eclipse Annular</string>
+    <string name="eclipse_duration">Duración del Eclipse</string>
     <string name="eclipse_event">Evento</string>
 
     <string name="eclipse_type_full">Eclipse solar total</string>
@@ -437,11 +442,9 @@
     </array>
 
     <array name="current_partners_desc">
-        <item name="nasa_description">La NASA (National Aeronautics and Space Administration, Administración Nacional de la Aeronáutica y del Espacio) es una agencia independiente del gobierno federal de Estados Unidos que dirige el programa espacial civil, así como la investigación aeronáutica y aeroespacial.
-            La NASA dirige una iniciativa de extensión educativa en torno a los eclipses, que incluye información y cobertura de estos sucesos en vivo.
-            Para obtener más información sobre la NASA, visite nasa.gov. El NASA Space Science Education Consortium (NSSEC) capitaliza la amplia trayectoria de la NASA de compartir investigación y tecnología mediante proyectos educativos atractivos e innovadores.
-            El NSSEC (anteriormente denominado Heliophysics Education Consortium [HEC]) continúa el trabajo de la organización Science Mission Directorate (SMD) al frente de las iniciativas educativas de la NASA al vincular ciencia y misiones emocionantes directamente con el público estadounidense.
-            El NSSEC colabora con Eclipse Soundscapes a fin de ofrecer el guion calculando el momento del eclipse, así como los fondos que posibilitan el proyecto Eclipse Soundscapes.</item>
+        <item name="nasa_description">El NASA Heliophysics Education Activation Team (NASA HEAT) capitaliza la amplia trayectoria de la NASA de compartir investigación y tecnología mediante proyectos educativos atractivos e innovadores.
+            El NASA HEAT (anteriormente denominado NASA Space Science Education Consortium (NSSEC)) continúa el trabajo de la organización Science Mission Directorate (SMD) al frente de las iniciativas educativas de la NASA al vincular ciencia y misiones emocionantes directamente con el público estadounidense.
+            El NASA HEAT colabora con ARISA Lab para su proyecto Eclipse Soundscapes aplicación mobil a fin de ofrecer el guion calculando el momento del eclipse, expertas en la materia, y los fondos que posibilitan el proyecto Eclipse Soundscapes.</item>
 
         <item name="wgbh_description">El National Center for Accessible Media (NCAM) de la fundación Carl and Ruth Shapiro Family es una rama sin fines de lucro de GBH en Boston que se dedica a lograr igualdad en el acceso a los medios para personas con discapacidades.
             El NCAM colabora con Eclipse Soundscapes a fin de ofrecer cobertura del eclipse en los medios, que incluye descripciones ilustrativas del eclipse por audio que permitirán que las personas con discapacidad visual puedan experimentar el eclipse a través de narraciones por audio en tiempo real.
