--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,8 +1,9 @@
 <resources>
-    <string name="app_name">Eclipse Soundscapes</string>
-    <string name="app_name_version">%1$s v%2$s</string>
+    <string name="app_name" translatable="false">Eclipse Soundscapes</string>
+    <string name="app_name_version" translatable="false">%1$s v%2$s</string>
     <string name="eclipse_features">Features</string>
     <string name="eclipse_center">Center</string>
+    <string name="eclipse_center_title">Eclipse Center</string>
 
     <!-- General -->
     <string name="media">Media</string>
@@ -20,7 +21,7 @@
 
     <string name="settings">Settings</string>
     <string name="open_settings">Open Settings</string>
-    <string name="open_description">Open Description</string>
+    <string name="open_description">Open Description of \n%1$s</string>
     <string name="description">Description</string>
     <string name="instructions">Instructions</string>
     <string name="welcome">Welcome</string>
@@ -80,16 +81,19 @@
     <string name="tos">Terms of Service</string>
     <string name="legal">Legal</string>
     <string name="libs_in_use">Libraries We Use</string>
-    <string name="jsyn_lib">JSyn</string>
+    <string name="jsyn_lib" translatable="false">JSyn</string>
 
     <string name="menu">Menu</string>
     <string name="about_us_details">The Eclipse Soundscapes mobile application is a product of the Eclipse Soundscapes Project, which is an enterprise ARISA Lab, LLC.
-        The Eclipse Soundscapes Project aims to engage ALL learners with astrophysics, with an intentional focus on inclusion and accessibility. For more information, visit EclipseSoundscapes.org.
-        The development of the Eclipse Soundscapes mobile application is funded by NASA Space Science Education Consortium.</string>
+        The Eclipse Soundscapes Project aims to engage ALL learners with astrophysics, with an intentional focus on inclusion and accessibility.
+        For more information, visit EclipseSoundscapes.org. The development of the Eclipse Soundscapes mobile application is funded by NASA Heliophysics Education Activation Team (NASA HEAT).</string>
 
     <!-- Eclipse Center -->
     <string name="eclipse_center_lockout_details">Updated Eclipse data coming soon.</string>
-    <string name="eclipse_countdown_title">Countdown Until Eclipse</string>
+    <string name="eclipse_countdown_title">Countdown Until Next Eclipse</string>
+    <string name="next_eclipse_info">Next Eclipse Info</string>
+    <string name="next_eclipse_user_location">Next Eclipse at Your Location</string>
+    <string name="next_eclipse_simulated_location">Next Eclipse at Closest Location</string>
     <string name="countdown_format">Countdown until eclipse from your location, %1$s years, %2$s months, %3$s days, %4$s hours, %5$s minutes and %6$s seconds</string>
     <string name="event_section_desc">Events at closest location are below. Events include your local time and universal time.</string>
     <string name="event_desc_format">Event from closest location, %1$s, local time, %2$s, universal time, %3$s</string>
@@ -107,10 +111,12 @@
     <string name="lat_lng_format">%1$.3f&#xb0; %2$s</string>
     <string name="percent_eclipse">% Eclipse</string>
     <string name="totality_duration">Duration of Totality</string>
+    <string name="annular_duration">Duration of Annularity</string>
+    <string name="eclipse_duration">Duration of Eclipse</string>
     <string name="eclipse_event">Event</string>
-    <string name="local_time">Local Time</string>
+    <string name="local_time">(Local Time)</string>
     <string name="universal_time">Universal Time</string>
-    <string name="time_ut">Time (UT)</string>
+    <string name="time_ut">(UT)</string>
 
     <string name="eclipse_type_full">Total Solar Eclipse</string>
     <string name="eclipse_type_partial">Partial Solar Eclipse</string>
@@ -118,11 +124,11 @@
     <string name="eclipse_type_annular">Annular Solar Eclipse</string>
     <string name="eclipse_type_unkown">Unknown</string>
 
-    <string name="eclipse_start_partial">Start of partial eclipse</string>
-    <string name="eclipse_start_full">Start of total eclipse</string>
-    <string name="eclipse_end_partial">End of partial eclipse</string>
-    <string name="eclipse_end_full">End of total eclipse</string>
-    <string name="eclipse_max">Maximum eclipse</string>
+    <string name="eclipse_start_partial">Start of Partial Eclipse</string>
+    <string name="eclipse_start_full">Start of Total Eclipse</string>
+    <string name="eclipse_end_partial">End of Partial Eclipse</string>
+    <string name="eclipse_end_full">End of Total Eclipse</string>
+    <string name="eclipse_max">Maximum Eclipse</string>
 
     <string name="active_event">Tap to hear about what\'s currently happening!</string>
 
@@ -350,11 +356,11 @@
     <string name="prominence">Prominence</string>
     <string name="prominence_closeup">Prominence Closeup</string>
     <string name="totality">Totality</string>
-    <string name="annular_start">The Eclipse Begins</string>
+    <string name="annular_start">The Annular Eclipse Begins</string>
     <string name="annular_phase_start">Annular Phase Begins</string>
     <string name="annularity">Annularity</string>
     <string name="annular_phase_end">Annular Phase Ends</string>
-    <string name="annular_end">The Eclipse Ends</string>
+    <string name="annular_end">The Annular Eclipse Ends</string>
     <string name="sun_as_star">Sun as a Star</string>
     <string name="eclipse_experience">Eclipse Experience</string>
     <string name="duration_desc_seconds">%1$s seconds</string>
@@ -367,8 +373,8 @@
     <string name="annular_solar_eclipse">Annular Solar Eclipse</string>
 
     <!-- rumble map interaction -->
-    <string name="rumble_map">Rumble Map</string>
-    <string name="rumble_maps">Rumble Maps</string>
+    <string name="rumble_map" translatable="false">Rumble Map</string>
+    <string name="rumble_maps" translatable="false">Rumble Maps</string>
     <string name="rumble_map_interaction">Rumble Map Interaction</string>
     <string name="rumble_map_launch">Press to interact with Rumble Map</string>
     <string name="rumble_map_how">How to Use The Rumble Map</string>
@@ -402,36 +408,36 @@
     <string name="page_indicator">Page %1$d of %2$d</string>
 
     <!-- Future Eclipses -->
-    <string name="future_eclipse_label_format">%1$s: %2$s</string>
+    <string name="future_eclipse_label_format" translatable="false">%1$s: %2$s</string>
     <string name="future_eclipse_features">Tracking, Rumble Maps, Narrations</string>
 
     <!-- Photo credits -->
-    <string name="credits_diamond_ring">©1991 Bill Reyna\n©2005 Hana Druckmüllerová, Miloslav Druckmüller</string>
-    <string name="credits_helmet_streamers">©1994 Úpice Observatory and Vojtech Rušin\n©2007 Miloslav Druckmüller</string>
-    <string name="credits_prominence">©1991 Peter Aniol\n©2010 Miloslav Druckmüller</string>
-    <string name="credits_sun_as_star">©2006 Martin Antoš, Hana Druckmüllerová, Miloslav Druckmüller, ESA/NASA</string>
-    <string name="credits_first_contact">XRT team(SAO, NASA, JAXA, NAOJ)</string>
-    <string name="credits_totality">©2006 Miloslav Druckmüller, Peter Aniol</string>
-    <string name="credits_bailys_beads">©2013 Úpice observatory Petr Horálek, Jan Sládeček\n©2014 Miloslav Duckmüller </string>
-    <string name="credits_corona">©2002 Arne Danielsen\n©2005 Miloslav Druckmüller</string>
-    <string name="credits_annular_start">© Rick Fienberg</string>
-    <string name="credits_annular_phase_start">© Ajay Talwar</string>
-    <string name="credits_annularity">© 2020 Talha Zia</string>
-    <string name="credits_annular_phase_end">© Ajay Talwar</string>
-    <string name="credits_annular_end">Courtesy of NASA/SDO and the AIA, EVE, and HMI science teams</string>
-    <string name="credits_link_diamond_ring">http://www.zam.fme.vutbr.cz/~druck/eclipse/Ecl1991m/Ecl1991_rdd_dr/0-info.htm</string>
-    <string name="credits_link_helmet_streamers">http://www.zam.fme.vutbr.cz/~druck/eclipse/Ecl1994ch/Mid_ecl/0-info.htm</string>
-    <string name="credits_link_prominence">http://www.zam.fme.vutbr.cz/~druck/eclipse/Ecl1991a/Ecl1991a_in03/0-info.htm</string>
-    <string name="credits_link_sun_as_star">http://www.zam.fme.vutbr.cz/~druck/eclipse/Ecl2006th/Tse2006tc_m200_inh30_32_c3/0-info.htm</string>
-    <string name="credits_link_first_contact">https://xrt.cfa.harvard.edu/xpow/20160315.html</string>
-    <string name="credits_link_totality">http://www.zam.fme.vutbr.cz/~druck/eclipse/ecl2006l/Tse2006l_1640_15/0-info.htm</string>
-    <string name="credits_link_bailys_beads">http://www.zam.fme.vutbr.cz/~druck/eclipse/Ecl2013u/Tse_2013_bp-7430/0-info.htm</string>
-    <string name="credits_link_corona">http://www.zam.fme.vutbr.cz/~druck/eclipse/Ecl2002a/Ecl2002_dd_cor/0-info.htm</string>
-    <string name="credits_link_annular_start">https://eclipse.aas.org/resources/images-videos#partial</string>
-    <string name="credits_link_annular_phase_start">http://xjubier.free.fr/en/site_pages/solar_eclipses/ASE_20200621_pg02.html</string>
-    <string name="credits_link_annularity">http://xjubier.free.fr/en/site_pages/solar_eclipses/ASE_19840530_pg01.html</string>
-    <string name="credits_link_annular_phase_end">http://xjubier.free.fr/en/site_pages/solar_eclipses/ASE_20200621_pg02.html</string>
-    <string name="credits_link_annular_end">https://sdo.gsfc.nasa.gov/gallery/main/item/131</string>
+    <string name="credits_diamond_ring" translatable="false">©1991 Bill Reyna\n©2005 Hana Druckmüllerová, Miloslav Druckmüller</string>
+    <string name="credits_helmet_streamers" translatable="false">©1994 Úpice Observatory and Vojtech Rušin\n©2007 Miloslav Druckmüller</string>
+    <string name="credits_prominence" translatable="false">©1991 Peter Aniol\n©2010 Miloslav Druckmüller</string>
+    <string name="credits_sun_as_star" translatable="false">©2006 Martin Antoš, Hana Druckmüllerová, Miloslav Druckmüller, ESA/NASA</string>
+    <string name="credits_first_contact" translatable="false">XRT team(SAO, NASA, JAXA, NAOJ)</string>
+    <string name="credits_totality" translatable="false">©2006 Miloslav Druckmüller, Peter Aniol</string>
+    <string name="credits_bailys_beads" translatable="false">©2013 Úpice observatory Petr Horálek, Jan Sládeček\n©2014 Miloslav Duckmüller </string>
+    <string name="credits_corona" translatable="false">©2002 Arne Danielsen\n©2005 Miloslav Druckmüller</string>
+    <string name="credits_annular_start" translatable="false">© Rick Fienberg</string>
+    <string name="credits_annular_phase_start" translatable="false">© Ajay Talwar</string>
+    <string name="credits_annularity" translatable="false">© 2020 Talha Zia</string>
+    <string name="credits_annular_phase_end" translatable="false">© Ajay Talwar</string>
+    <string name="credits_annular_end" translatable="false">Courtesy of NASA/SDO and the AIA, EVE, and HMI science teams</string>
+    <string name="credits_link_diamond_ring" translatable="false">http://www.zam.fme.vutbr.cz/~druck/eclipse/Ecl1991m/Ecl1991_rdd_dr/0-info.htm</string>
+    <string name="credits_link_helmet_streamers" translatable="false">http://www.zam.fme.vutbr.cz/~druck/eclipse/Ecl1994ch/Mid_ecl/0-info.htm</string>
+    <string name="credits_link_prominence" translatable="false">http://www.zam.fme.vutbr.cz/~druck/eclipse/Ecl1991a/Ecl1991a_in03/0-info.htm</string>
+    <string name="credits_link_sun_as_star" translatable="false">http://www.zam.fme.vutbr.cz/~druck/eclipse/Ecl2006th/Tse2006tc_m200_inh30_32_c3/0-info.htm</string>
+    <string name="credits_link_first_contact" translatable="false">https://xrt.cfa.harvard.edu/xpow/20160315.html</string>
+    <string name="credits_link_totality" translatable="false">http://www.zam.fme.vutbr.cz/~druck/eclipse/ecl2006l/Tse2006l_1640_15/0-info.htm</string>
+    <string name="credits_link_bailys_beads" translatable="false">http://www.zam.fme.vutbr.cz/~druck/eclipse/Ecl2013u/Tse_2013_bp-7430/0-info.htm</string>
+    <string name="credits_link_corona" translatable="false">http://www.zam.fme.vutbr.cz/~druck/eclipse/Ecl2002a/Ecl2002_dd_cor/0-info.htm</string>
+    <string name="credits_link_annular_start" translatable="false">https://eclipse.aas.org/resources/images-videos#partial</string>
+    <string name="credits_link_annular_phase_start" translatable="false">http://xjubier.free.fr/en/site_pages/solar_eclipses/ASE_20200621_pg02.html</string>
+    <string name="credits_link_annularity" translatable="false">http://xjubier.free.fr/en/site_pages/solar_eclipses/ASE_19840530_pg01.html</string>
+    <string name="credits_link_annular_phase_end" translatable="false">http://xjubier.free.fr/en/site_pages/solar_eclipses/ASE_20200621_pg02.html</string>
+    <string name="credits_link_annular_end" translatable="false">https://sdo.gsfc.nasa.gov/gallery/main/item/131</string>
 
     <string name="our_partners">Our Partners</string>
     <string name="current_partners">Current Partners</string>
@@ -440,8 +446,8 @@
     <string name="feedback">Give Feedback</string>
 
     <array name="current_partners_title">
-        <item name="partner_nasa">NASA’s Space Science Education Consortium (NSSEC)</item>
-        <item name="partner_wgbh">National Center for Accessible Media, WGBH</item>
+        <item name="partner_nasa">NASA Heliophysics Education Activation Team (NASA HEAT)</item>
+        <item name="partner_wgbh">National Center for Accessible Media, GBH</item>
         <item name="partner_nfb">National Federation of the Blind</item>
         <item name="partner_science_friday">Science Friday</item>
     </array>
@@ -456,12 +462,9 @@
     </array>
 
     <array name="current_partners_desc">
-        <item name="nasa_description">NASA (National Aeronautics and Space Administration) is an independent agency of the United States federal government which conducts the civilian space program, aeronautics, and aerospace research.
-            NASA is leading an educational outreach effort surrounding eclipses, which includes information and live coverage of these events.
-            For more information on NASA, visit nasa.gov. The NASA Space Science Education Consortium (NSSEC) capitalizes on NASA\’s rich history of sharing research and technology through compelling and innovative education projects.
-            The NSSEC (formerly the Heliophysics Education Consortium (HEC)) continues the Science Mission Directorate\’s (SMD) work at the forefront of NASA\’s educational endeavors by linking exciting science and missions directly to the American public.
-            NSSEC is partnering with Eclipse Soundscapes to provide the script calculating the timing of the eclipse, as well as the funding that makes Eclipse Soundscapes possible.
-        </item>
+        <item name="nasa_description">The NASA Heliophysics Education Activation Team (NASA HEAT) capitalizes on NASA\’s rich history of sharing research and technology through compelling and innovative education projects.
+            NASA HEAT (formerly NASA Space Science Education Consortium (NSSEC)) continues the Science Mission Directorate\’s (SMD) work at the forefront of NASA\’s educational endeavors by linking exciting science and missions directly to the American public.
+            NASA HEAT is partnering with ARISA Lab on its Eclipse Soundscapes Mobile Application Project to provide the script calculating the timing of the eclipse, subject matter experts, and the funding that makes the Eclipse Soundscapes mobile application possible.</item>
 
         <item name="wgbh_description">The Carl and Ruth Shapiro Family National Center for Accessible Media (NCAM) is a non-profit branch of GBH in Boston which is dedicated to achieving media access equality for people with disabilities.
             NCAM is partnering with Eclipse Soundscapes to provide media coverage of the eclipse, including illustrative audio descriptions of the eclipse which will allow visually impaired individuals to experience the eclipse through real-time audio narrations.
@@ -510,10 +513,10 @@
     </array>
 
     <array name="current_partners_link">
-        <item name="nasa_link">science.nasa.gov/science-activation-team/nasa-space-science-education-consortium</item>
-        <item name="gbh_link">ncam.wgbh.org</item>
-        <item name="nfb_link">www.nfb.org</item>
-        <item name="science_friday_link">sciencefriday.com</item>
+        <item name="nasa_link">https://science.nasa.gov/science-activation-team/nasa-heliophysics-education-activation-team</item>
+        <item name="gbh_link">http://ncam.wgbh.org</item>
+        <item name="nfb_link">http://nfb.org</item>
+        <item name="science_friday_link">https://sciencefriday.com</item>
     </array>
 
     <array name="past_partners_link">
@@ -536,8 +539,8 @@
     </array>
 
     <array name="team_title">
-        <item name="member_henry_winter">Principal Investigator</item>
-        <item name="member_marykay">Project Manager</item>
+        <item name="member_henry_winter">Co-Principal Investigator</item>
+        <item name="member_marykay">Co-Principal Investigator</item>
         <item name="member_arlindo">Application Developer</item>
         <item name="member_joel">Application Developer</item>
         <item name="member_miles">Audio Engineer</item>
