Updates privacy policy and tos link

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -386,8 +386,8 @@
     <!-- About -->
     <string name="supported_eclipse">Eclipses We Support</string>
     <string name="link_feedback_form" translatable="false"><![CDATA[https://eclipsesoundscapes.org/ES_MobileApp_Feedback]]></string>
-    <string name="privacy_policy_url" translatable="false"><![CDATA[https://eclipsesoundscapes.org/privacy-policy]]></string>
-    <string name="tos_url" translatable="false"><![CDATA[https://eclipsesoundscapes.org/Terms-of-Service]]></string>
+    <string name="privacy_policy_url"><![CDATA[https://eclipsesoundscapes.org/privacy-policy]]></string>
+    <string name="tos_url"><![CDATA[https://eclipsesoundscapes.org/Terms-of-Service]]></string>
 
     <!-- Walkthrough -->
     <string name="walkthrough">Walkthrough</string>
