--- a/app/src/main/res/values-es/strings.xml
+++ b/app/src/main/res/values-es/strings.xml
@@ -93,8 +93,8 @@
     <string name="past_partners">Colaboradores anteriores</string>
     <string name="our_team">Nuestro equipo</string>
     <string name="feedback">Dar opinión</string>
-    <string name="privacy_policy_url" translatable="false"><![CDATA[https://eclipsesoundscapes.org/es/content/pol%C3%ADtica-de-privacidad]]></string>
-    <string name="tos_url" translatable="false"><![CDATA[https://eclipsesoundscapes.org/es/content/t%C3%A9rminos-de-servicio]]></string>
+    <string name="privacy_policy_url"><![CDATA[https://eclipsesoundscapes.org/es/declaracion-de-privacidad]]></string>
+    <string name="tos_url"><![CDATA[https://eclipsesoundscapes.org/es/condiciones-del-servicio]]></string>
 
     <string name="libraries_use_detail">A continuación se establecen los avisos de derechos de autor para el software de terceros que puede ser parte de la aplicación móvil Eclipse Soundscapes.
         Agradecemos a la comunidad de código abierto por todas sus contribuciones.</string>
