--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -35,6 +35,7 @@
     <string name="pause">Pause</string>
     <string name="back">Back</string>
     <string name="cancel">Cancel</string>
+    <string name="complete">Complete</string>
 
     <string name="years">Years</string>
     <string name="months">Months</string>
